<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/new_card_adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ID_AD_MOB_MAIN" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/new_card_adview"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_activity_name"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/new_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_card_activity_name_tip"
            android:imeOptions="actionNext"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_activity_number"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/new_card_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_card_activity_number_tip"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="16"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_activity_cpf"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/new_card_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_card_activity_cpf_tip"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_activity_type"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/new_card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/new_card_activity_type_tip"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
                android:id="@+id/new_card_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/primary"
                android:visibility="gone" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/new_card_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#1E88E5"
                android:text="@string/new_card_activity_save" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
